--- a/index.html
+++ b/index.html
@@ -4,12 +4,41 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Wordpress.</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 
 
 <body>
+  <header>
+    <section class="clearfix">
+      <div class="titolo">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloribus ullam beatae provident debitis facere laboriosam sit reprehenderit laborum obcaecati exercitationem eligendi, illo, blanditiis labore porro in modi, unde natus ipsum.</div>
+    </section>
+    
+    <section class="clearfix">
+      <div class="intro">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem natus, libero vero asperiores culpa eaque esse, voluptatibus quam commodi vitae magnam magni aliquid animi nobis illo nesciunt officiis fugiat harum.</div>
+    </section>
+  </header>
+
+  <main>
+    <section class="clearfix">
+      <div class="sub-titolo ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Error, iste nemo aperiam quae dolorum quisquam nisi placeat sint animi minima id voluptates iusto fugit modi doloremque vel ipsum nihil illum!
+      </div>
+    
+    </section>
+      <div class="contenuto clearfix">
+        <div class="left">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime unde voluptas reprehenderit molestiae explicabo iusto recusandae suscipit cumque quasi! Cupiditate aliquid ut velit, porro nulla officiis sapiente perferendis aspernatur est?</div>
+        <div class="center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam consequatur quae recusandae officiis consequuntur dolorem corporis, atque eos nam maxime delectus, vel, rem ratione soluta commodi debitis autem provident. Officiis.</div>
+        <div class="right">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae fuga voluptatibus autem laborum velit eos harum, pariatur qui nostrum quam nobis suscipit libero blanditiis rerum. Sed soluta rem perspiciatis id?</div>
+      </div>
+  </main>
+
+  <footer>
+    di
+  </footer>
   
 </body>
+
+
+
 </html>
